# todoist_claude_mcp_server_v1.0

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  server.py  setup.py  smithery.yaml  test_mcp.py
