[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todoist-mcp-server"
version = "1.0.0"
description = "MCP server to connect Todoist with Claude through REST API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "shawkatdidar", email = "shawkat.didar@gmail.com"}
]
keywords = ["todoist", "mcp", "claude", "api", "productivity", "task-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "mcp>=0.1.0",
    "tenacity>=8.2.0",
    "smithery-mcp-python>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/shawkatdidar/todoist_claude_mcp_server_v1.0"
Repository = "https://github.com/shawkatdidar/todoist_claude_mcp_server_v1.0"
Issues = "https://github.com/shawkatdidar/todoist_claude_mcp_server_v1.0/issues"

[project.scripts]
todoist-mcp-server = "server:main"

[tool.setuptools]
py-modules = ["server"]
